tests/compile-fail/semck/static-with-variable.rs
static FOO: int = a; //! ERROR(1:19): unexpected token: `a`, expected a literal

fn main() {}